[package]
name = "rustgrab"
version = "0.7.3"
authors = ["Kate Ward <kate@dariox.club>"]
description = "Screenshot Utility made in Rust"
homepage = "https://github.com/ktwrd/rustgrab"
repository = "https://github.com/ktwrd/rustgrab"
keywords = ["twitter", "mastodon", "imgur", "gtk", "linux"]
license = "GPL-3.0"
include = ["lang/*", "Cargo.toml", "data/gtk/dialog.ui", "src/*"]
edition = "2021"
readme = "README.md"

[[bin]]
name = "rustgrab"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.18.1", features = ["v3_24", "gio_v2_58"] }
gdk = { version = "0.18.0", features = ["v3_24"] }
glib = { version = "0.18.5" }
gio = { version = "0.18.4" }
open = "5.1.2"
imgur = "0.7.0"
notify-rust = "4.11.0"
yaml-rust = "0.4.5"
clap = { version = "4.5.4", features = ["cargo"] }
egg-mode-text = "1.15.1"
screenshot-rs = "0.1.5"
chrono = "0.4.38"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
reqwest = { version = "0.12.4", features = ["multipart", "stream", "blocking"] }
arboard = "3.4.0"

# used for the "$uuid" location template
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
