[package]
name = "rustgrab"
version = "0.8.0"
authors = ["Kate Ward <kate@dariox.club>"]
description = "Screenshot Utility made in Rust"
homepage = "https://github.com/ktwrd/rustgrab"
repository = "https://github.com/ktwrd/rustgrab"
keywords = ["imgur", "google-cloud", "xbackbone", "screenshot", "uploader"]
license = "GPL-3.0"
include = ["lang/*", "Cargo.toml", "data/gtk/dialog.ui", "src/*"]
edition = "2021"
readme = "README.md"

[[bin]]
name = "rustgrab"
path = "src/main.rs"

[dependencies]
glib = { version = "0.18.5" }
open = "5.1.2"
notify-rust = "4.11.0"
yaml-rust = "0.4.5"
clap = { version = "4.5.4", features = ["cargo"] }
egg-mode-text = "1.15.1"
screenshot-rs = "0.1.5"
chrono = "0.4.38"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
arboard = "3.4.0"
image = { version = "0.25.1", features = ["png"] }
native-dialog = "0.7.0"
homedir = "0.2.1"
imgurs = { git = "https://github.com/M3DZIK/imgurs", tag = "v0.11.3"}
futures = "0.3.30"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
google-cloud-storage = "0.18.0"
rand = "0.8.5"
google-cloud-auth = "0.15.0"
mime_guess = "2.0.4"
edit = "0.1.5"
async-stream = "0.3.5"
tokio-util = { version= "0.7.11", features = ["io"] }
indicatif = "0.17.8"

fltk = { version = "1.4.30", features = ["fltk-bundled"] }
lazy_static = "1.4.0"
strum = "0.26.2"
strum_macros = "0.26.3"
fltk-theme = "0.7.2"

[dependencies.reqwest]
version = "0.12.4"
features = [
    "multipart",
    "stream",
    "blocking"
]

# used for the "$uuid" location template
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
fl2rust = "0.5.19"
